--- a/config.toml
+++ b/config.toml
@@ -77,4 +77,4 @@ weight = 3
     
   [[params.social]]
     name = "twitter"
-    link = "https://twitter.com/r3bo0tbx1/"
+    link = "https://twitter.com/intent/follow?screen_name=r3bo0tbx1"
