--- a/.github/workflows/brokenbotnet.yml
+++ b/.github/workflows/brokenbotnet.yml
@@ -29,3 +29,4 @@ jobs:
         with:
           github_token: ${{ secrets.TOKEN }}
           publish_dir: ./public
+          PAGES_CNAME: brokenbotnet.com
