--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/cactus-theme"]
-	path = themes/cactus-theme
-	url = https://github.com/r3bo0tbx1/cactus-theme.git
+[submodule "themes/PaperMod"]
+	path = themes/PaperMod
+	url = https://github.com/adityatelange/hugo-PaperMod.git
