--- a/config.yml
+++ b/config.yml
@@ -17,7 +17,7 @@ params:
   title: Br🤖ken B🤖tnet
   description: 'Broken Botnet is an InfoSec blog by rE-Bo0t.bx1, Learn more about Security, Privacy, Hacking tricks, InfoSec, OSINT, Hacker news, CVE, Vulnerabilities.'
   author: rE-Bo0t.bx1
-  images: '/img/2eb4f752e958d555a797f7f6fe00a1c7.jpg'
+  image: '/img/2eb4f752e958d555a797f7f6fe00a1c7.jpg'
   keywords : "BrokenBotnet, Broken Botnet, InfoSec blog, rE-Bo0t.bx1, Security, Privacy, Hacking tricks, InfoSec, OSINT, Hacker news, CVE, Vulnerabilities"
   homeSubtitle : "InfoSec Blog by rE-Bo0t.bx1"
 
