--- a/config.yml
+++ b/config.yml
@@ -15,10 +15,11 @@ minify:
 params:
   env: production
   title: Br🤖ken B🤖tnet
-  description: 'Broken Botnet is an InfoSec blog by rE-Bo0t.bx1, Learn more about Security, Privacy, Hacking tricks, InfoSec, OSINT, Hacker news, CVE, Vulnerabilities.'
+  description: 'Broken Botnet was an InfoSec blog by rE-Bo0t.bx1'
   author: rE-Bo0t.bx1
   keywords : "BrokenBotnet, Broken Botnet, InfoSec blog, rE-Bo0t.bx1, Security, Privacy, Hacking tricks, InfoSec, OSINT, Hacker news, CVE, Vulnerabilities"
   homeSubtitle : "InfoSec Blog by rE-Bo0t.bx1"
+  images: ["https://brokenbotnet.com/img/2eb4f752e958d555a797f7f6fe00a1c7.jpg"]
 
   ShowReadingTime: true
   ShowShareButtons: false
@@ -28,7 +29,8 @@ params:
   disableSpecial1stPost : false
 
   assets:
-    favicon: '/img/favicon.png'
+  disableFingerprinting: true
+  favicon: '/img/favicon.png'
 
   label:
     text: "Br🤖ken B🤖tnet"
